Updated the plugin to default to parse push notification for android

--- a/plugin.xml
+++ b/plugin.xml
@@ -3,7 +3,7 @@
 <plugin xmlns="http://www.apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android" id="parse-push-plugin" version="1.0.5">
    <name>ParsePushPlugin</name>
    <description>Parse.Push plugin for phonegap/cordova/ionic framework</description>
-	<keywords>cordova,phonegap,ionic framework, parse server, parse push, push notification</keywords>
+    <keywords>cordova,phonegap,ionic framework, parse server, parse push, push notification</keywords>
 
    <js-module src="www/parse-push-plugin.js" name="ParsePushPlugin">
       <clobbers target="ParsePushPlugin" />
@@ -16,12 +16,13 @@
          </feature>
       </config-file>
       <config-file target="AndroidManifest.xml" parent="/manifest/application">
+         <meta-data android:name="com.parse.push.notification_icon" android:resource="@drawable/push_icon"/>
          <service android:name="com.parse.PushService" />
-         <receiver android:exported="false" android:name="github.taivo.parsepushplugin.ParsePushPluginReceiver">
+         <receiver android:exported="false" android:name="com.parse.ParsePushBroadcastReceiver">
             <intent-filter>
-               <action android:name="com.parse.push.intent.RECEIVE" />
-               <action android:name="com.parse.push.intent.DELETE" />
-               <action android:name="com.parse.push.intent.OPEN" />
+              <action android:name="com.parse.push.intent.RECEIVE" />
+              <action android:name="com.parse.push.intent.DELETE" />
+              <action android:name="com.parse.push.intent.OPEN" />
             </intent-filter>
          </receiver>
          <receiver android:name="com.parse.GcmBroadcastReceiver" android:permission="com.google.android.c2dm.permission.SEND">
@@ -36,7 +37,9 @@
          <uses-permission android:name="android.permission.INTERNET" />
          <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
          <uses-permission android:name="android.permission.WAKE_LOCK" />
+         <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
          <uses-permission android:name="android.permission.VIBRATE" />
+         <uses-permission android:name="android.permission.GET_ACCOUNTS" />
          <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 
          <permission android:protectionLevel="signature" android:name="${applicationId}.permission.C2D_MESSAGE" />
