--- a/plugin.xml
+++ b/plugin.xml
@@ -23,6 +23,8 @@
               <action android:name="com.parse.push.intent.RECEIVE" />
               <action android:name="com.parse.push.intent.DELETE" />
               <action android:name="com.parse.push.intent.OPEN" />
+              <action android:name="android.intent.action.BOOT_COMPLETED" />
+              <action android:name="android.intent.action.USER_PRESENT" />
             </intent-filter>
          </receiver>
          <receiver android:name="com.parse.GcmBroadcastReceiver" android:permission="com.google.android.c2dm.permission.SEND">
