updated support package

--- a/plugin.xml
+++ b/plugin.xml
@@ -57,7 +57,7 @@
 
       <framework src="com.parse:parse-android:1.13.0" />
       <framework src="com.parse.bolts:bolts-android:1.4.0" />
-      <framework src="com.android.support:support-v4:+" />
+      <framework src="com.android.support:support-v4:27.1.0+" />
 
       <source-file src="src/android/ParsePushPlugin.java" target-dir="src/github/taivo/parsepushplugin" />
       <source-file src="src/android/ParsePushPluginReceiver.java" target-dir="src/github/taivo/parsepushplugin" />
